--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:1.5.6.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-data-jpa:1.5.6.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-velocity")
+    compile("com.google.code.gson:gson:2.8.0")
     compile("mysql:mysql-connector-java:5.1.43")
+    compile fileTree(dir:'lib',include:['*.jar'])
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
