--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,7 @@ dependencies {
     compile 'jstl:jstl:1.2'
     compile("org.springframework.boot:spring-boot-starter-web:1.5.6.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-data-jpa:1.5.6.RELEASE")
-    compile("org.springframework.boot:spring-boot-starter-velocity")
-    compile("com.google.code.gson:gson:2.8.0")
+//    compile("com.google.code.gson:gson:2.8.0")
     compile("mysql:mysql-connector-java:5.1.43")
     compile fileTree(dir:'lib',include:['*.jar'])
     testCompile('org.springframework.boot:spring-boot-starter-test')
