--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+
     }
 }
 apply plugin: 'java'
@@ -32,15 +33,20 @@ sourceCompatibility = 1.7
 [compileJava, javadoc, compileTestJava]*.options*.encoding = 'UTF-8'
 
 repositories {
-    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+    mavenCentral()
+    mavenLocal()
+    maven { url "http://code.thvos.com:8081/nexus/content/repositories/snapshots" }
 }
 
 dependencies {
     compile 'jstl:jstl:1.2'
     compile("org.springframework.boot:spring-boot-starter-web:1.5.6.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-data-jpa:1.5.6.RELEASE")
+    compile ("org.csource:fastdfs:1.2.0")
+    compile('org.apache.httpcomponents:httpclient:4.5.2')
 //    compile("com.google.code.gson:gson:2.8.0")
     compile("mysql:mysql-connector-java:5.1.43")
     compile fileTree(dir:'lib',include:['*.jar'])
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
